# VirtualApp

./: build.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/jni/: CMakeLists.txt
